<resources>
    <string name="app_name">Dicoding Stories</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="login">Login</string>
    <string name="sign_up">Sign Up</string>
    <string name="name">Nama</string>
    <string name="dummy_desc">Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua. Ut enim ad minim veniam, quis nostrud exercitation ullamco laboris nisi ut aliquip ex ea commodo consequat.</string>
    <string name="detail">Detail</string>
    <string name="in">Masuk</string>
    <string name="not_joined">Belum gabung Dicoding Stories?</string>
    <string name="register">Daftar</string>
    <string name="create_a_stories">Create a Stories</string>
    <string name="camera">Camera</string>
    <string name="galery">Galery</string>
    <string name="describe_the_moment">Describe The Moment</string>
    <string name="desciption">Desciption</string>
    <string name="share">Share</string>
    <string name="have_registered">Sudah gabung Dicoding Stories?</string>
    <string name="photo_link">Photo Link</string>
    <string name="dummy_url">https://story-api.dicoding.dev/images/stories/photos-1641623658595_dummy-pic.png</string>
    <string name="dummy_time">2022-01-08T06:34:18.598Z</string>
    <string name="created_at">Created At</string>
    <string name="dummy_latlon">-10.212</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="appwidget_text">Kumpulan Story</string>
    <string name="empty_text">NO DATA</string>
    <string name="add_widget">Add widget</string>
    <string name="app_widget_description">This is an app widget description</string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="logout">Logout</string>
    <string name="normal_type">Normal Map</string>
    <string name="satellite_type">Satellite Map</string>
    <string name="terrain_type">Terrain Map</string>
    <string name="hybrid_type">Hybrid Map</string>
    <string name="maps">Maps</string>
    <string name="add_story">Add Story</string>
    <string name="home">Home</string>
</resources>