<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/settingLogout"
        android:icon="@drawable/ic_logout"
        android:title="@string/logout"
        app:showAsAction="ifRoom"/>
    <item
        android:id="@+id/normal_type"
        android:title="@string/normal_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/satellite_type"
        android:title="@string/satellite_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/terrain_type"
        android:title="@string/terrain_type"
        app:showAsAction="never" />
    <item
        android:id="@+id/hybrid_type"
        android:title="@string/hybrid_type"
        app:showAsAction="never" />

</menu>